syntax = "proto3";
option go_package = "tsuwari/grpc/emotes_cacher";
package emotes_cacher;
import "google/protobuf/empty.proto";

service EmotesCacher {
  rpc CacheChannelEmotes(Request) returns (google.protobuf.Empty) {}
  rpc CacheGlobalEmotes(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

message Request {
  string channelId = 1;
}